--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_test_loc">TestLoc</string>
+    <string name="BtestLoc">Tester la localisation</string>
+    <string name="BtestHTTP">Tester le HTTP</string>
 </resources>
