--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="title_activity_test_loc">TestLoc</string>
     <string name="BtestLoc">Tester la localisation</string>
     <string name="BtestHTTP">Tester le HTTP</string>
+    <string name="title_activity_test_http">TestHTTP</string>
+    <string name="title_activity_test_les_deux">TestLesDeux</string>
+    <string name="BtestLesDeux">Tester les deux</string>
 </resources>
