--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="BtestHTTP">Tester le HTTP</string>
     <string name="title_activity_test_http">TestHTTP</string>
     <string name="title_activity_test_les_deux">TestLesDeux</string>
+    <string name="title_activity_test_les_deux_periodique">TestLesDeuxPeriodique</string>
     <string name="BtestLesDeux">Tester les deux</string>
+    <string name="BtestLesDeuxPeriodique">Tester les deux périodiquement</string>
 </resources>
