test haggis OK unitaire

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_activity_test_les_deux_periodique">TestLesDeuxPeriodique</string>
     <string name="BtestLesDeux">Tester les deux</string>
     <string name="BtestLesDeuxPeriodique">Tester les deux périodiquement</string>
+    <string name="TtestLesDeux">TtestLesDeux</string>
 </resources>
